[gd_scene load_steps=7 format=3 uid="uid://20gxgb34eh6j"]

[ext_resource type="PackedScene" uid="uid://riu12himw1tm" path="res://options_screen.tscn" id="1_0428m"]
[ext_resource type="Script" uid="uid://cb5okfjchhqjh" path="res://about_game.gd" id="1_jdvkd"]
[ext_resource type="FontFile" uid="uid://5kt5choslo8x" path="res://Bravecho.otf" id="2_u7lq8"]
[ext_resource type="AudioStream" uid="uid://7cf2yn8xx7ue" path="res://MenuClick.ogg" id="3_7806o"]
[ext_resource type="AudioStream" uid="uid://bbve0abhhyhre" path="res://MenuHover.ogg" id="4_jdvkd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmo1c"]
bg_color = Color(0, 0, 0, 1)

[node name="AboutGame" type="Node2D"]
script = ExtResource("1_jdvkd")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_0428m")]

[node name="Label" type="Label" parent="."]
offset_right = 1156.0
offset_bottom = 139.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0.14902, 0.14902, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/line_spacing = 20
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_u7lq8")
theme_override_font_sizes/font_size = 90
text = "ACERCA DEL JUEGO"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
text_overrun_behavior = 1

[node name="Details" type="Label" parent="."]
offset_left = 72.0
offset_top = 120.0
offset_right = 1270.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 21
text = "Una desafiante aventura de rompecabezas en 2D donde debes esquivar patrones de luz mortales, 
recolectar monedas y sobrevivir en la mazmorra.

Explora un castillo oscuro lleno de peligrosas trampas de luz que siguen patrones predecibles.
Tu objetivo:

- Recolectar todas las monedas en cada nivel
- Evitar los patrones de luz dinámicos que te matarán al instante
- Planificar tus movimientos con cuidado: ¡un paso en falso podría significar empezar de nuevo!

CONTROLES
Movimiento - 'Flechas' o 'WASD'
Menú de pausa - Tecla 'ESC'"

[node name="Start game" type="Button" parent="."]
offset_left = 432.0
offset_top = 544.0
offset_right = 733.0
offset_bottom = 607.0
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_vmo1c")
text = "Empezar juego"

[node name="Options" type="Button" parent="."]
offset_left = 808.0
offset_top = 544.0
offset_right = 1109.0
offset_bottom = 607.0
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_vmo1c")
text = "Opciones"

[node name="Back" type="Button" parent="."]
offset_left = 48.0
offset_top = 544.0
offset_right = 349.0
offset_bottom = 607.0
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_vmo1c")
text = "Atras"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7806o")
bus = &"Sound Effects"

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jdvkd")
bus = &"Sound Effects"

[connection signal="mouse_entered" from="Start game" to="." method="_on_start_game_mouse_entered"]
[connection signal="pressed" from="Start game" to="." method="_on_start_game_pressed"]
[connection signal="mouse_entered" from="Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
